[package]
name = "pcie"
version = "0.3.0"
edition = "2021"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://gitee.com/ZR233/pcie"
license = "MIT"
description = "A simple PCIE driver for enumerating devices."
keywords = ["os", "pci", "pcie", "driver"]
categories = ["embedded", "no-std"]


[dependencies]
log = "0.4"
bit_field = "0.10"
mbarrier = "0.1"
bitflags = "2"
pci_types = "0.10"
trait-ffi = "0.1"
tock-registers = "0.10"
futures = {version = "0.3", default-features = false}
thiserror = {version = "2.0", default-features = false}

[dev-dependencies]
bare-test = "0.4.1"

[build-dependencies]
bare-test-macros = "0.2"


[[test]]
name = "test"
harness = false